--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,412 +6,451 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_1
     type: vmess
-    server: 23.227.38.99
-    port: 443
+    server: 2d1t5w05.mcfront.xyz
+    port: 31306
     cipher: auto
-    uuid: 86d37526-5758-4cec-862f-df404b313086
+    uuid: eca9ad34-1222-470d-8104-45ddac4debfd
     alterId: 0
     tls: true
+    skip-cert-verify: true
+    servername: tw05.lovemc.xyz
+    network: tcp
+  - &id002
+    name: 🇰🇷_KR_韩国
+    type: vmess
+    server: 146.56.174.31
+    port: 8080
+    cipher: auto
+    uuid: c2eb5ff8-508d-4100-e0ca-9739f4d1c52c
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /3G6WPDL7
-      headers:
-        host: 1.freek1.xyz
-  - &id002
-    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
-    type: vmess
-    server: 7c6i2r04.mcfront.xyz
-    port: 31877
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: br04.lovemc.xyz
-    network: tcp
+      path: /tg@herhero6
   - &id003
     name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
     type: vmess
-    server: 6w7j3p06.mcfront.xyz
-    port: 31111
+    server: 1j8p05.abzoones.xyz
+    port: 36106
     cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: jp06.lovemc.xyz
+    servername: jp05.abpilot.xyz
     network: tcp
   - &id004
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_1
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
     type: vmess
-    server: 4o5a3u04.mcfront.xyz
-    port: 31821
+    server: 3d6e04.abzoones.xyz
+    port: 36841
     cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: au04.lovemc.xyz
+    servername: de04.abpilot.xyz
     network: tcp
   - &id005
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 4a2u0a05.mcfront.xyz
-    port: 31506
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us05.lovemc.xyz
-    network: tcp
-  - &id006
     name: 🇨🇳_CN_中国->🇻🇳_VN_越南
     type: vmess
-    server: 2w8u2a04.mcfront.xyz
-    port: 31874
+    server: 3v4n04.abzoones.xyz
+    port: 36874
     cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: vn04.lovemc.xyz
+    servername: vn04.abpilot.xyz
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: vmess
+    server: 3u1s05.abzoones.xyz
+    port: 36506
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us05.abpilot.xyz
     network: tcp
   - &id007
     name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
     type: vmess
-    server: 5m4h0k05.mcfront.xyz
-    port: 31606
+    server: 8h2k05.abzoones.xyz
+    port: 36606
     cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: hk05.lovemc.xyz
+    servername: hk05.abpilot.xyz
     network: tcp
   - &id008
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_2
-    type: vmess
-    server: 2d1t5w06.mcfront.xyz
-    port: 31311
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw06.lovemc.xyz
-    network: tcp
-  - &id009
     name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
     type: vmess
-    server: 1c7s2g04.mcfront.xyz
-    port: 31201
+    server: 9s5g04.abzoones.xyz
+    port: 36201
     cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: sg04.lovemc.xyz
+    servername: sg04.abpilot.xyz
     network: tcp
+  - &id009
+    name: 🇸🇬_SG_新加坡
+    type: ss
+    server: 54.151.179.33
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
   - &id010
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
-    type: vmess
-    server: 6w7j3p05.mcfront.xyz
-    port: 31106
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp05.lovemc.xyz
-    network: tcp
-  - &id011
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 3a4u0k04.mcfront.xyz
-    port: 31811
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: uk04.lovemc.xyz
-    network: tcp
-  - &id012
-    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
-    type: vmess
-    server: 7c1a1r04.mcfront.xyz
-    port: 31861
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ar04.lovemc.xyz
-    network: tcp
-  - &id013
-    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
-    type: vmess
-    server: 3c2h4u04.mcfront.xyz
-    port: 31864
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hu04.lovemc.xyz
-    network: tcp
-  - &id014
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: vmess
-    server: 9t1d5e04.mcfront.xyz
-    port: 31841
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: de04.lovemc.xyz
-    network: tcp
-  - &id015
-    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
-    type: vmess
-    server: 4t1u6r04.mcfront.xyz
-    port: 31868
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tr04.lovemc.xyz
-    network: tcp
-  - &id016
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: vmess
-    server: 4w7u4a04.mcfront.xyz
-    port: 31871
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ua04.lovemc.xyz
-    network: tcp
-  - &id017
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
-    type: vmess
-    server: 5m4h0k04.mcfront.xyz
-    port: 31601
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hk04.lovemc.xyz
-    network: tcp
-  - &id018
-    name: 🇨🇳_CN_中国->🇵🇭_PH_菲律宾
-    type: vmess
-    server: 1a4p0h04.mcfront.xyz
-    port: 31801
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ph04.lovemc.xyz
-    network: tcp
-  - &id019
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 6q3i1n04.mcfront.xyz
-    port: 31831
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: in04.lovemc.xyz
-    network: tcp
-  - &id020
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_3
-    type: vmess
-    server: 6w7j3p04.mcfront.xyz
-    port: 31116
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp04.lovemc.xyz
-    network: tcp
-  - &id021
     name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
     type: vmess
-    server: 1c7s2g05.mcfront.xyz
-    port: 31206
+    server: 9s5g05.abzoones.xyz
+    port: 36206
     cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: sg05.lovemc.xyz
+    servername: sg05.abpilot.xyz
     network: tcp
-  - &id022
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
+  - &id011
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
     type: vmess
-    server: 2d1t5w04.mcfront.xyz
-    port: 31301
+    server: 8u9a04.abzoones.xyz
+    port: 36871
     cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: tw04.lovemc.xyz
+    servername: ua04.abpilot.xyz
     network: tcp
-  - &id023
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
+  - &id012
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_1
     type: vmess
-    server: 3d1c4a04.mcfront.xyz
-    port: 31701
+    server: 8t6w06.abzoones.xyz
+    port: 36311
     cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ca04.lovemc.xyz
+    servername: tw06.abpilot.xyz
     network: tcp
-  - &id024
-    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
+  - &id013
+    name: 🇩🇪_DE_德国
     type: vmess
-    server: 8l2k1r04.mcfront.xyz
-    port: 31401
+    server: 54.38.154.182
+    port: 54902
     cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: kr04.lovemc.xyz
-    network: tcp
-  - &id025
-    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 4t1r5u04.mcfront.xyz
-    port: 31851
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ru04.lovemc.xyz
-    network: tcp
-  - &id026
-    name: 🇸🇬_SG_新加坡
-    type: vmess
-    server: a2.zwtg888.com
-    port: 383
-    cipher: auto
-    uuid: 731938de-22c8-3d7e-849b-c4610bce7994
-    alterId: 0
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /v2ray
-      headers:
-        host: www.minecraft.com
-  - &id027
+    network: tcp
+  - &id014
     name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: vmess
-    server: 4a2u0a04.mcfront.xyz
-    port: 31501
+    server: 3u1s04.abzoones.xyz
+    port: 36501
     cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: us04.lovemc.xyz
+    servername: us04.abpilot.xyz
     network: tcp
-  - &id028
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
+  - &id015
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_2
     type: vmess
-    server: 5m4h0k06.mcfront.xyz
-    port: 31611
+    server: 8t6w04.abzoones.xyz
+    port: 36301
     cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: hk06.lovemc.xyz
+    servername: tw04.abpilot.xyz
     network: tcp
-  - &id029
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+  - &id016
+    name: 🇺🇦_UA_乌克兰->🇬🇧_GB_英国_1
     type: vmess
-    server: 4a2u0a06.mcfront.xyz
-    port: 31511
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us06.lovemc.xyz
-    network: tcp
-  - &id030
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
-    type: vmess
-    server: 1c7s2g06.mcfront.xyz
-    port: 31211
-    cipher: auto
-    uuid: 5d336469-53b0-4036-8f2f-33d9bc317743
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg06.lovemc.xyz
-    network: tcp
-  - &id031
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: vmess
-    server: a-cm1.jsmmm.cyou
-    port: 39611
-    cipher: auto
-    uuid: 2ca11501-7729-3f82-884a-1ceaf2a49a3f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id032
-    name: 🇬🇧_GB_英国->🇺🇸_US_美国
-    type: vmess
-    server: speed.76898102.xyz
+    server: 212.110.134.7
     port: 443
     cipher: auto
-    uuid: dddd0b29-1576-4003-9990-d7cea34264db
+    uuid: 3de4ec27-74b4-43e3-bf23-18e726ac80bc
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /835757
+      path: /P6kpn5UKG40MNLK2
       headers:
-        host: dedi2.1808.cf
-  - &id033
-    name: 🇫🇷_FR_法国
+        host: zHGKLbqn6UM.janbaroon.com
+  - &id017
+    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
     type: vmess
-    server: pl2-vmess.greenssh.xyz
-    port: 443
+    server: 6i2r04.abzoones.xyz
+    port: 36877
     cipher: auto
-    uuid: 2e68015f-a8b2-4893-a7a3-4edb19b178d9
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
     alterId: 0
     tls: true
+    skip-cert-verify: true
+    servername: br04.abpilot.xyz
+    network: tcp
+  - &id018
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
+    type: vmess
+    server: 104.19.251.120
+    port: 2083
+    cipher: auto
+    uuid: 3abe40d0-dbe1-481a-9427-9f4d8c646d34
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: x1.ylks01.eu.org
+  - &id019
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_2
+    type: vmess
+    server: 5a4u04.abzoones.xyz
+    port: 36821
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: au04.abpilot.xyz
+    network: tcp
+  - &id020
+    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 8r5u04.abzoones.xyz
+    port: 36851
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ru04.abpilot.xyz
+    network: tcp
+  - &id021
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_3
+    type: vmess
+    server: 8t6w05.abzoones.xyz
+    port: 36306
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: tw05.abpilot.xyz
+    network: tcp
+  - &id022
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 8080
+    cipher: auto
+    uuid: d16c31a2-93a3-4f1a-954c-e383b14a4d26
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id023
+    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
+    type: vmess
+    server: 8k2r04.abzoones.xyz
+    port: 36401
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: kr04.abpilot.xyz
+    network: tcp
+  - &id024
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
+    type: vmess
+    server: 5c1a04.abzoones.xyz
+    port: 36701
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ca04.abpilot.xyz
+    network: tcp
+  - &id025
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: 104.16.150.9
+    port: 443
+    cipher: auto
+    uuid: 3de4ec27-74b4-43e3-bf23-18e726ac80bc
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /P6kpn5UKG40MNLK2
+      headers:
+        host: XWOp2D.janbaroon.com
+  - &id026
+    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
+    type: vmess
+    server: 9a8r04.abzoones.xyz
+    port: 36861
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ar04.abpilot.xyz
+    network: tcp
+  - &id027
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    type: vmess
+    server: 8h2k06.abzoones.xyz
+    port: 36611
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hk06.abpilot.xyz
+    network: tcp
+  - &id028
+    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
+    type: vmess
+    server: 2t1u04.abzoones.xyz
+    port: 36868
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: tr04.abpilot.xyz
+    network: tcp
+  - &id029
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
+    type: vmess
+    server: 9s5g06.abzoones.xyz
+    port: 36211
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: sg06.abpilot.xyz
+    network: tcp
+  - &id030
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
+    type: vmess
+    server: 1j8p06.abzoones.xyz
+    port: 36111
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: jp06.abpilot.xyz
+    network: tcp
+  - &id031
+    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
+    type: vmess
+    server: 2h4u04.abzoones.xyz
+    port: 36864
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hu04.abpilot.xyz
+    network: tcp
+  - &id032
+    name: 🇺🇦_UA_乌克兰->🇬🇧_GB_英国_2
+    type: vmess
+    server: 45.67.215.70
+    port: 443
+    cipher: auto
+    uuid: 3de4ec27-74b4-43e3-bf23-18e726ac80bc
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /P6kpn5UKG40MNLK2
+      headers:
+        host: lMcFuKcm63c5wv.janbaroon.com
+  - &id033
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: vmess
+    server: 2u3k04.abzoones.xyz
+    port: 36811
+    cipher: auto
+    uuid: adf399c5-f715-4e16-b837-58f4410e2a9b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: uk04.abpilot.xyz
+    network: tcp
+  - &id034
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 158.101.7.8
+    port: 80
+    cipher: auto
+    uuid: 95b45c49-f5c0-4959-bb64-2b8fbc4a869c
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
       headers:
-        host: pl2-vmess.greenssh.xyz
+        host: YTB-awkj
+  - &id035
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_4
+    type: vmess
+    server: 26.v2-ray.cyou
+    port: 23626
+    cipher: auto
+    uuid: 0dd19d20-ec86-3680-b256-87237bafa89e
+    alterId: 2
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: 26.v2-ray.cyou
+  - &id036
+    name: 🇯🇵_JP_日本
+    type: trojan
+    server: us1.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: 4b526505-3de3-4cb4-8f99-70b65adea09f
+    sni: 13-231-155-134.NHOST.00CDN.COM
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -471,6 +510,9 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
+      - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -509,6 +551,9 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
+      - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -545,6 +590,9 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
+      - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
