--- a/pub/jiang.yaml
+++ b/pub/jiang.yaml
@@ -5,24 +5,21 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: https://1808.cf 二爷翻墙_1, server: 110.249.164.75, port: 50445, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
-  - {name: https://1808.cf 二爷翻墙_2, server: 202.108.15.135, port: 443, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
-  - {name: https://1808.cf 二爷翻墙_3, server: 199.15.76.34, port: 443, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
-  - {name: https://1808.cf 二爷翻墙_4, server: 162.159.243.235, port: 443, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
-  - {name: https://1808.cf 二爷翻墙_5, server: 154.17.12.175, port: 40001, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
-  - {name: https://1808.cf 二爷翻墙_6, server: 192.203.230.100, port: 443, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
-  - {name: https://1808.cf 二爷翻墙_7, server: 192.203.230.253, port: 443, type: vmess, uuid: dddd0b29-1576-4003-9990-d7cea34264db, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /835757, headers: {Host: dedi2.1808.cf}}}
-  - {name: https://1808.cf 二爷翻墙_8, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
-  - {name: https://1808.cf 二爷翻墙_9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
-  - {name: https://1808.cf 二爷翻墙_10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
-  - {name: https://1808.cf 二爷翻墙_11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: sw.sharecentrepro.com}}}
-  - {name: https://1808.cf 二爷翻墙_12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
-  - {name: https://1808.cf 二爷翻墙_16, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
-  - {name: https://1808.cf 二爷翻墙_17, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
-  - {name: https://1808.cf 二爷翻墙_18, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.scproxy.top}}}
+  - {name: https://1808.cf 二爷翻墙_1, server: 193.122.122.133, port: 40001, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
+  - {name: https://1808.cf 二爷翻墙_2, server: 202.108.15.135, port: 443, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
+  - {name: https://1808.cf 二爷翻墙_3, server: 162.159.243.235, port: 443, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
+  - {name: https://1808.cf 二爷翻墙_4, server: 162.159.243.233, port: 443, type: vmess, uuid: 06a28663-4320-4a31-ab98-0ef8c1ef546b, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /cec6f2, headers: {Host: ttk.731808.tk}}}
+  - {name: https://1808.cf 二爷翻墙_5, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: ca.ilovescp.com}}}
+  - {name: https://1808.cf 二爷翻墙_6, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: hk-hytron.ilovescp.com}}}
+  - {name: https://1808.cf 二爷翻墙_7, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: nl.sharecentrepro.com}}}
+  - {name: https://1808.cf 二爷翻墙_8, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: sw.sharecentrepro.com}}}
+  - {name: https://1808.cf 二爷翻墙_9, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
+  - {name: https://1808.cf 二爷翻墙_10, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv1.sharecentrepro.org}}}
+  - {name: https://1808.cf 二爷翻墙_11, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv2.sharecentrepro.org}}}
+  - {name: https://1808.cf 二爷翻墙_12, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: lv3.sharecentrepro.org}}}
+  - {name: https://1808.cf 二爷翻墙_13, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp1.scproxy.top}}}
+  - {name: https://1808.cf 二爷翻墙_14, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp3.scproxy.top}}}
+  - {name: https://1808.cf 二爷翻墙_15, server: cf-lt.sharecentre.online, port: 80, type: vmess, uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /shirker, headers: {Host: dp4.scproxy.top}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
@@ -44,9 +41,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_13
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
-      - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
-      - https://1808.cf 二爷翻墙_18
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -68,9 +62,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_13
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
-      - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
-      - https://1808.cf 二爷翻墙_18
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -92,9 +83,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_13
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
-      - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
-      - https://1808.cf 二爷翻墙_18
   - name: 📲 电报信息
     type: select
     proxies:
@@ -115,9 +103,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_13
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
-      - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
-      - https://1808.cf 二爷翻墙_18
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
@@ -138,9 +123,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_13
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
-      - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
-      - https://1808.cf 二爷翻墙_18
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -161,9 +143,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_13
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
-      - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
-      - https://1808.cf 二爷翻墙_18
   - name: 📢 谷歌FCM
     type: select
     proxies:
@@ -185,9 +164,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_13
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
-      - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
-      - https://1808.cf 二爷翻墙_18
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -225,9 +201,6 @@ proxy-groups:
       - https://1808.cf 二爷翻墙_13
       - https://1808.cf 二爷翻墙_14
       - https://1808.cf 二爷翻墙_15
-      - https://1808.cf 二爷翻墙_16
-      - https://1808.cf 二爷翻墙_17
-      - https://1808.cf 二爷翻墙_18
 rules:
  - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
  - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
